[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scenes/game_objects/obstacles/scripts/Launcher.gd" type="Script" id=1]
[ext_resource path="res://assets/images/sprites/01/beamsocket.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/game_objects/obstacles/Launcher_projectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/GodotGame_SFX_Launcher.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.23351, 4.05503 )

[sub_resource type="Animation" id=2]
resource_name = "firing"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseElement:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="Launcher" type="Area2D"]
script = ExtResource( 1 )
projectile = ExtResource( 3 )
firing_direction = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BaseElement" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/firing = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.90735e-06, 0 )
scale = Vector2( 4.8, 4 )
process_parent = true
physics_process_parent = true

[node name="launcherAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -18.367
attenuation = 16.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
